--- a/clima_index.html
+++ b/clima_index.html
@@ -125,8 +125,6 @@ var dateTime = date+' '+time;
   </script>
 </div>
 
-
-
 	<div class="split left">
   <div class="left">
 	  
@@ -142,10 +140,11 @@ var dateTime = date+' '+time;
 
 <h1>The embed element</h1>
 
-<embed type="text/html" src="https://www.imn.ac.cr/especial/tablas/argentina.html"  width="500" height="200">
+<embed type="text/html" src="https://www.imn.ac.cr/especial/tablas/argentina.html"  width="500" height="500">
 
   </script>
 </div>
+<h3>Fuente: Instituto Meteorológico Nacional (IMN)</h3>
 
 	
 	
