--- a/clima_index.html
+++ b/clima_index.html
@@ -140,7 +140,7 @@ var dateTime = date+' '+time;
 
 <h1>The embed element</h1>
 
-<embed type="text/html" src="https://www.imn.ac.cr/especial/tablas/argentina.html"  width="500" height="500">
+<embed type="text/html" src="https://www.imn.ac.cr/especial/tablas/argentina.html"  width="700" height="500" style="background-color: rgba(00, 10, 10, 0.6)">
 
   </script>
 </div>
