--- a/clima_index.html
+++ b/clima_index.html
@@ -145,7 +145,7 @@ var dateTime = date+' '+time;
   </script>
 </div>
 <h3>Fuente: Instituto Meteorológico Nacional (IMN)</h3>
-<h3>Datos sin control de calidad</h3>
+<string>Datos sin control de calidad</string>
 
 	
 	
