--- a/clima_index.html
+++ b/clima_index.html
@@ -53,11 +53,11 @@ h1 {
 
 	
 	<div class="split right">
-  <div class="right">
+  <div class="left">
 	  
 <head>
   <meta charset="utf-8" />
-  <title>Open-Meteoのサンプル</title>
+  <title> </title>
 </head>
 <body>
   <h2>Datos climáticos de temperatura</h2> 
@@ -130,7 +130,7 @@ var dateTime = date+' '+time;
 	  
 <head>
   <meta charset="utf-8" />
-  <title>Open-Meteoのサンプル</title>
+  <title></title>
 </head>
 <body>
   <h2>Datos estación IMN</h2> 
