--- a/clima_index.html
+++ b/clima_index.html
@@ -53,7 +53,7 @@ h1 {
 
 	
 	<div class="split right">
-  <div class="left">
+  <div class="right">
 	  
 <head>
   <meta charset="utf-8" />
@@ -136,7 +136,7 @@ var dateTime = date+' '+time;
   <h2>Datos estación IMN</h2> 
 </div>
 
-<embed type="text/html" src="https://www.imn.ac.cr/especial/tablas/argentina.html"  width="600" height="500" style="background-color: rgba(1000, 1000, 1000, 0.6)">
+<embed type="text/html" src="https://www.imn.ac.cr/especial/tablas/argentina.html"  width="650" height="500" style="background-color: rgba(1000, 1000, 1000, 0.6)">
 
   </script>
 </div>
