--- a/clima_index.html
+++ b/clima_index.html
@@ -61,7 +61,7 @@ h1 {
   <title> </title>
 </head>
 <body>
-  <h2>Datos climáticos de temperatura</h2> 
+  <h2>Datos diarios de Precipitación y Evapotranspiración de referencia FAO (ET₀) actuales y pronosticados</h2> 
 </div>
 
 
