--- a/clima_index.html
+++ b/clima_index.html
@@ -61,8 +61,8 @@ h1 {
   <title> </title>
 </head>
 <body>
-  <h6>Datos diarios de Precipitación y Evapotranspiración de referencia FAO (ET₀) actuales y pronosticados </h6> 
-	
+  <h6>Datos diarios de Precipitación y Evapotranspiración de referencia FAO (ET₀)</h6>  
+	<h6>actuales y pronosticados </h6>
 </div>
 
 
