--- a/clima_index.html
+++ b/clima_index.html
@@ -145,6 +145,12 @@ var dateTime = date+' '+time;
 <h3>Fuente: Instituto Meteorológico Nacional (IMN)</h3>
 <string>Datos sin control de calidad</string>
 
+	</div>
+
+<embed type="text/html" src="https://on.windy.com/6qo8r"  width="650" height="500" style="background-color: rgba(1000, 1000, 1000, 0.6)">
+
+  </script>
+</div>
 	
 	
 </body>
