--- a/clima_index.html
+++ b/clima_index.html
@@ -147,7 +147,7 @@ var dateTime = date+' '+time;
 
 	</div>
 
-<embed type="text/html" src="https://on.windy.com/6qo8r"  width="650" height="500" style="background-color: rgba(1000, 1000, 1000, 0.6)">
+<iframe width="650" height="450" src="https://embed.windy.com/embed2.html?lat=9.938&lon=-84.045&detailLat=9.938&detailLon=-84.045&width=650&height=450&zoom=5&level=surface&overlay=wind&product=ecmwf&menu=&message=&marker=&calendar=now&pressure=&type=map&location=coordinates&detail=&metricWind=km%2Fh&metricTemp=%C2%B0C&radarRange=-1" frameborder="0"></iframe>
 
   </script>
 </div>
