--- a/clima_index.html
+++ b/clima_index.html
@@ -20,7 +20,7 @@ h1 {
 
 <style> 
 	body  {
-	  background-image: url("canal.jpg");           
+	 /* background-image: url("canal.jpg");  */       
 	  background-size: 100% auto;
 	  background-repeat: no-repeat; 
 	  margin: 1%;
