--- a/clima_index.html
+++ b/clima_index.html
@@ -147,7 +147,7 @@ var dateTime = date+' '+time;
 
 	</div>
 
-<iframe width="650" height="450" src="https://embed.windy.com/embed2.html?lat=10.001&lon=-84.310&detailLat=10.062&detailLon=-84.310&width=650&height=450&zoom=11&level=surface&overlay=wind&product=ecmwf&menu=&message=true&marker=true&calendar=now&pressure=true&type=map&location=coordinates&detail=true&metricWind=km%2Fh&metricTemp=%C2%B0C&radarRange=-1" frameborder="0"></iframe>
+<iframe width="650" height="450" src="https://embed.windy.com/embed2.html?lat=10.009&lon=-84.293&detailLat=10.070&detailLon=-84.310&width=650&height=450&zoom=11&level=surface&overlay=wind&product=ecmwf&menu=&message=true&marker=&calendar=now&pressure=&type=map&location=coordinates&detail=true&metricWind=km%2Fh&metricTemp=%C2%B0C&radarRange=-1" frameborder="0"></iframe>
   </script>
 </div>
 	
