--- a/clima_index.html
+++ b/clima_index.html
@@ -137,8 +137,9 @@ var dateTime = date+' '+time;
 <body>
   <h2>Datos estación IMN</h2> 
 </div>
-
-<embed type="text/html" src="https://www.imn.ac.cr/especial/tablas/argentina.html"  width="650" height="500" style="background-color: rgba(1000, 1000, 1000, 0.6)">
+ 
+	  /*style="background-color: rgba(1000, 1000, 1000, 0.6)" */
+<embed type="text/html" src="https://www.imn.ac.cr/especial/tablas/argentina.html"  width="650" height="500">
 
   </script>
 </div>
