--- a/clima_index.html
+++ b/clima_index.html
@@ -80,7 +80,7 @@ var dateTime = date+' '+time;
 
 
 </script>
-  <canvas id="stage" style="background-color: rgba(00, 10, 10, 0.6)"></canvas>
+  <canvas id="stage"></canvas>
   
   <small><a href="https://open-meteo.com/">Weather data by Open-Meteo.com</a></small>
 
