--- a/clima_index.html
+++ b/clima_index.html
@@ -52,22 +52,37 @@ h1 {
 <h1>Sistema de Monitoreo climatico </h1>
 <div>
 
-	
-	<div class="split right">
-  <div class="right">
-	  
-<head>
-  <meta charset="utf-8" />
-  <title> </title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+ /* height: 300px; */ /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+</style>
 </head>
 <body>
-  <h6>Datos diarios de Precipitación y Evapotranspiración de referencia FAO (ET₀)</h6>  
-	<h6>actuales y pronosticados </h6>
-</div>
 
+<h2>Datos climáticos</h2>
 
-
-<!-- Current Date and Time -->
+<div class="row">
+  <div class="column" style="background-color:white;">
+    <h2>Datos de precipitación y evapotranspiración de referencia</h2>
+    <p>Fuente: Open Meteo</p>
+  <!-- Current Date and Time -->
 Fecha y hora actual:
 <input type="text" id="currentDateTime">
 <br><br>
@@ -129,16 +144,19 @@ var dateTime = date+' '+time;
 
 	<div class="split left">
   <div class="left">
-	  
-<head>
-  <meta charset="utf-8" />
-  <title></title>
-</head>
-<body>
-  <h2>Datos estación IMN</h2> 
-</div>
+  </div>
+  
+  
+  
+  
+  
+  <div class="column" style="background-color:white;">
+    <h2>Datos estación la Argentina</h2>
+    <p>Fuente: Instituto Meteorológico Nacional</p>
+
+
  
-	  /*style="background-color: rgba(1000, 1000, 1000, 0.6)" */
+	 <!--  /* style="background-color: rgba(1000, 1000, 1000, 0.6)" */ -->
 <embed type="text/html" src="https://www.imn.ac.cr/especial/tablas/argentina.html"  width="400" height="500">
 
   </script>
@@ -146,12 +164,18 @@ var dateTime = date+' '+time;
 <h3>Fuente: Instituto Meteorológico Nacional (IMN)</h3>
 <string>Datos sin control de calidad</string>
 
-	</div>
+	</div>   
+    
 
-<iframe width="650" height="450" src="https://embed.windy.com/embed2.html?lat=9.877&lon=-84.283&detailLat=9.938&detailLon=-84.045&width=650&height=450&zoom=11&level=surface&overlay=wind&product=ecmwf&menu=&message=true&marker=&calendar=now&pressure=&type=map&location=coordinates&detail=true&metricWind=km%2Fh&metricTemp=%C2%B0C&radarRange=-1" frameborder="0"></iframe>
+<div class="column" style="background-color: white;">
+    <h2>Datos climáticos de Windy</h2>
+    <p>Puede explorar diferente tipos de datos</p>
+    <iframe width="650" height="450" src="https://embed.windy.com/embed2.html?lat=9.877&lon=-84.283&detailLat=9.938&detailLon=-84.045&width=650&height=450&zoom=11&level=surface&overlay=wind&product=ecmwf&menu=&message=true&marker=&calendar=now&pressure=&type=map&location=coordinates&detail=true&metricWind=km%2Fh&metricTemp=%C2%B0C&radarRange=-1" frameborder="0"></iframe>
   </script>
+  </div>
+</div>   
+  </div>
 </div>
-	
 	
 </body>
 </html>
