--- a/clima_index.html
+++ b/clima_index.html
@@ -1,7 +1,50 @@
 <!DOCTYPE html>
+<html lang="es">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<head>
+	<!-- Hoja de estilos CSS adicionales -->
+		<link rel="stylesheet" type="text/css" href="styles.css">	
+		<link rel="stylesheet" type="text/css" href="style_barra.css">
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+h1 {
+  text-shadow: 2px 2px 5px white;
+}
+</style>
+</head>
+<body>
+ <title>Plantaciones de caña de azúcar en CoopeVictoria R.L.
+ </title>  
+
+<style> 
+	body  {
+	 /* background-image: url("canal.jpg");  */       
+	  background-size: 100% auto;
+	  background-repeat: no-repeat; 
+	  margin: 1%;
+	  
+	}
+</style>
+	
+	<meta charset="UTF-8">
+	
+</script>
+	
+</head>
+	
+<body>
+
+<div class="row" >
+<div class="topnav">
+  	<a class="active" href="index.html">Principal</a>
+  	<a href="smscopevictoria.html">SMS-CoopeVictoria R.L.</a>
+	<a href="clima_index.html">Sección climática</a>
+  	<a href="contactos.html">Contactos</a>
+	
+</div>
+
 <style>
 * {
   box-sizing: border-box;
