--- a/clima_index.html
+++ b/clima_index.html
@@ -217,6 +217,7 @@ var dateTime = date+' '+time;
       });
     }
 
+	  <iframe width="400" height="383" src="https://github.com/CIAUCR/CoopeVictoria-R.L/blob/main/graph_temp_diaria" frameborder="1"></iframe>
 
   </script>
     <hr/>
