--- a/clima_index.html
+++ b/clima_index.html
@@ -212,6 +212,8 @@ backgroundColor: "rgba(255,99,132,0.1)",
   </script>
   <string>Fuente: OpenMeteo</string>
 
-  </script>
+
+   </script>
+  </div>
 </body>
 </html>
