--- a/clima_index.html
+++ b/clima_index.html
@@ -210,7 +210,7 @@ backgroundColor: "rgba(255,99,132,0.1)",
     
      
   </script>
-  <string>Fuente: OpenMeteo</string>
+  <string>Fuente: Windy</string>
 
 
    </script>
