--- a/clima_index.html
+++ b/clima_index.html
@@ -80,7 +80,7 @@ body  {
   <div class="column" style="background-color:white;height: 10%; width: 50%">
    <div id="container" style="height: 50px; width: 100px"></div>
   <h2>Datos climáticos</h2>  
-    <h2>Datos de precipitación y evapotranspiración de referencia jjjjj</h2>
+    <h2>Datos de precipitación y evapotranspiración de referencia</h2>
    
   <!-- Current Date and Time -->
 Fecha y hora actual:
