--- a/clima_index.html
+++ b/clima_index.html
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Hoja de estilos CSS adicionales -->
 <link rel="stylesheet" type="text/css" href="styles.css">
 <link rel="stylesheet" type="text/css" href="style_barra.css">
@@ -10,7 +11,7 @@
 <head>
 <style>
 h1 {
-  text-shadow: 2px 2px 5px white;
+  text-shadow: 2% 2% 5% white;
 }
 </style>
 </head>
@@ -56,7 +57,7 @@ body  {
 .column {
   float: left;
   width: 90%;
-  padding: 0px;
+  padding: 0%;
  /* height: 100px;*/  /* Should be removed. Only for demonstration */
 }
 
@@ -78,7 +79,7 @@ body  {
      
 <div class="column">
   <div class="column" style="background-color:white;height: 10%; width: 50%">
-   <div id="container" style="height: 50px; width: 100px"></div>
+   <div id="container" style="height: 50%; width: 100%"></div>
   <h2>Datos climáticos</h2>  
     <h2>Datos de precipitación y evapotranspiración de referencia</h2>
    
@@ -96,10 +97,6 @@ var dateTime = date+' '+time;
 
 </script>
   <canvas id="stage2"></canvas>
- 
-
-
-
  
   <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.2/dist/chart.js"></script>
   <script>
@@ -144,7 +141,7 @@ backgroundColor: "rgba(255,99,132,0.2)",
        
  
   <div class="column" style="background-color:white;height: 10%; width: 50%">
-      <div id="container" style="height: 70px; width: 10%"></div>
+      <div id="container" style="height: 70%; width: 10%"></div>
 <h2>Datos estación la Argentina</h2>
 
 <!--  /* style="background-color: rgba(1000, 1000, 1000, 0.6)" */ -->
@@ -162,10 +159,10 @@ backgroundColor: "rgba(255,99,132,0.2)",
  
 
 <div class="column" style="background-color: white;height: 10%; width: 50%">
- <div id="container" style="height: 70px; width: 10%"></div>
+ <div id="container" style="height: 70%; width: 10%"></div>
     <h2>Datos climáticos de Windy</h2>
     <p>Puede explorar diferente tipos de datos</p>
-    <iframe width="700" height="700" src="https://embed.windy.com/embed2.html?lat=9.877&lon=-84.283&detailLat=9.938&detailLon=-84.045&width=650&height=450&zoom=11&level=surface&overlay=wind&product=ecmwf&menu=&message=true&marker=&calendar=now&pressure=&type=map&location=coordinates&detail=true&metricWind=km%2Fh&metricTemp=%C2%B0C&radarRange=-1" frameborder="1"></iframe>
+    <iframe width="100%" height="700" src="https://embed.windy.com/embed2.html?lat=9.877&lon=-84.283&detailLat=9.938&detailLon=-84.045&width=650&height=450&zoom=11&level=surface&overlay=wind&product=ecmwf&menu=&message=true&marker=&calendar=now&pressure=&type=map&location=coordinates&detail=true&metricWind=km%2Fh&metricTemp=%C2%B0C&radarRange=-1" frameborder="1"></iframe>
   </script>
   </div>
  
@@ -175,7 +172,8 @@ backgroundColor: "rgba(255,99,132,0.2)",
 
   
 <div class="column" style="background-color: white;height: 10%; width: 50%">
- <div id="container" style="height: 70px; width: 10%"></div>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+ <div id="container" style="height: 70%; width: 10%"></div>
    
 
  <h2>Datos climáticos de Windy</h2>
