--- a/clima_index.html
+++ b/clima_index.html
@@ -236,7 +236,9 @@ backgroundColor: "rgba(255,99,132,0.1)",
 <h2>Notas importantes:</h2>
 
 <p>Todos los datos climáticos están en relación a la ubicación de CoopeVictoria R.L.</p>
-<p>Los datos de la estación La Argentina provienen del Instituto Meteorológico Nacional de Costa Rica</p>
+<p>Los datos de la estación La Argentina provienen del Instituto Meteorológico Nacional de Costa Rica.</p>
+<p>Si alguna gráfico no carga por favor <strong> recargue la página.</strong></p>
+
 
 
 </body>
