--- a/clima_index.html
+++ b/clima_index.html
@@ -16,7 +16,7 @@ h1 {
 </style>
 </head>
 <body>
- <title>Plantaciones de caña de azúcar en CoopeVictoria R.L.
+ <title>Plantaciones de caña de azúcar CoopeVictoria R.L.
  </title>  
 
 <style>
@@ -131,7 +131,7 @@ backgroundColor: "rgba(255,99,132,0.2)",
       });
     }
   </script>
-<p>Fuente: Open Meteo</p>
+<p>Fuente: OpenMeteo</p>
 </div>
 
 
@@ -237,10 +237,8 @@ backgroundColor: "rgba(255,99,132,0.1)",
 
 <p>Todos los datos climáticos están en relación a la ubicación de CoopeVictoria R.L.</p>
 <p>Los datos de la estación La Argentina provienen del Instituto Meteorológico Nacional de Costa Rica.</p>
+<p>Esta estación del IMN se ubica 8,5 km al Suroeste de la cooperativa.</p>
 <p>Si algún gráfico no carga por favor <strong> recargue la página.</strong></p>
-
-
 
 </body>
 </html>
-
