--- a/clima_index.html
+++ b/clima_index.html
@@ -222,12 +222,7 @@ backgroundColor: "rgba(255,99,132,0.1)",
   <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.2/dist/chart.js"></script>
   <script>
 
-    const url2 = 'https://github.com/CIAUCR/CoopeVictoria-R.L/blob/main/rendimientohistorico.geojson';
-
-    fetch(url2)
-    .then(data => data.json())
-    .then(json => drawChart(json))
-
+$.getJSON("lotes_coopevictoriarl.geojson")
 
     function drawChart(json) {
       const mydata3 = {
